# GDP_team1

./: Detection_Model.py  README.md
Cognitive Load/: Readme.md
Detection Models/: Detection_Model.py  TrainModel.py
Obstacle Detection/: TrainObjectDetection.py  obstacle_detection.py
RL/RL_CL_train/: DQN.py  actor_critic.py  environment.py  environment_test.py  geometry.py  nav_env.py  plot_utils.py  train.py
RL/RL_nav_train/: DDPG.py  actor_critic.py  environment.py  rl_utils.py  test.py  train.py
RL/Sound_WSL/: sound.ipynb
RL/models/: model2d
RL/models/nav/: AC2d_2  AC2d_3  AC2d_3b  AC2d_4  AC2d_5  AC2d_5b  AC2d_5c  DDPG2d_1
RL/tests/: RL3.ipynb  RL3.py  RL4.py  RL42d.py  RL43d.ipynb  RL43d.py  test.py  test2.py  test3.py
code/RL_nav_train/: actor_critic.py  environment.py  plot_utils.py  rl_utils.py  train.py
code/tests/: RL.py  RL42d.ipynb  plot_utils.py  rl_utils.py  test2.py
position_publisher/: CMakeLists.txt  README.txt  RL_communication.py  env.py  from_csv.py  image_subscriber.py  package.xml  pos_range_cogload.py  position_publisher_test.py  position_subscriber.py  range_subscriber.py  reset_simulation.py  reset_simulation_server.py  setup.py
roof_mapping/: script.py
roof_mapping/models/: README.rtf
roof_mapping/models/roof_classifier-1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
roof_mapping/models/roof_classifier-1/variables/: variables.index
roof_mapping/roof_classification/: train_classifier.ipynb
roof_mapping/roof_detection/: coco_eval.py  predict.py
